bugfix: invisible connection lost popups were obstructing user interactions

--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -375,8 +375,6 @@ select {
 
         grid-row: 1;
         grid-column: 1 / 3;
-
-        @include single-container();
     }
 }
 
@@ -396,7 +394,8 @@ select {
 }
 
 .rio-connection-lost-popup-visible {
-    display: block;
+    @include single-container(); // This also sets the display attribute
+
     background-color: rgba(0, 0, 0, 0.5);
     opacity: 1;
 
